Simplifies tags and fixes alignment

--- a/css/style.css
+++ b/css/style.css
@@ -82,19 +82,21 @@ hr {
 
 #condition {
     color: rgba(255,255,255,0.6);
+    margin-bottom: 0;
 }
 
-#temperature h4 {
+#temperature h3 {
     text-align: left;
     font-weight: bold;
     color: rgba(255,255,255,0.6);
+    margin-top: 0;
     margin-bottom: 0;
 }
 
 #temperature p {
     text-align: center;
-    font-size: 150px;
-    line-height: 150px;
+    font-size: 140px;
+    line-height: 140px;
     font-weight: bold;
     margin-bottom: 0;
 }
@@ -107,7 +109,7 @@ hr {
     left: -5px;
 }
 
-#temperature h5 {
+#temperature h4 {
     margin-bottom: 0;
     text-align: left;
     color: rgba(255,255,255,0.6);
